--- a/GameControlPlugin/GameControlPlugin.csproj
+++ b/GameControlPlugin/GameControlPlugin.csproj
@@ -1,94 +1,27 @@
-<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-    <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
+ <Project Sdk="Microsoft.NET.Sdk">
     <PropertyGroup>
-        <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-        <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-        <ProjectGuid>{3B611B37-8B82-4D74-8CAD-8EE57E62C57F}</ProjectGuid>
-        <OutputType>Library</OutputType>
-        <AppDesignerFolder>Properties</AppDesignerFolder>
         <RootNamespace>Loupedeck.GameControlPlugin</RootNamespace>
-        <AssemblyName>GameControlPlugin</AssemblyName>
-        <TargetFrameworkVersion>v4.8.1</TargetFrameworkVersion>
-        <FileAlignment>512</FileAlignment>
-    </PropertyGroup>
-    <PropertyGroup>
-        <BaseIntermediateOutputPath>$(SolutionDir)..\obj\</BaseIntermediateOutputPath>
-        <BaseOutputPath>$(SolutionDir)..\bin\</BaseOutputPath>
-    </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-        <DebugSymbols>true</DebugSymbols>
-        <DebugType>full</DebugType>
-        <Optimize>false</Optimize>
-        <OutputPath Condition="$(OS) == 'Windows_NT'">$(LocalAppData)\Loupedeck\Plugins\GameControl\win\</OutputPath>
-        <OutputPath Condition="$(OS) != 'Windows_NT'">$(HOME)/.local/share/Loupedeck/Plugins/GameControl/mac/</OutputPath>
-        <DefineConstants>DEBUG;TRACE</DefineConstants>
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
+        
+        <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+        <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+
+        <PluginApiDir Condition="$(OS) == 'Windows_NT'">C:\Program Files\Logi\LogiPluginService\</PluginApiDir>
+        <PluginApiDir Condition="$(OS) != 'Windows_NT'">/Applications/Utilities/LogiPluginService.app/Contents/MonoBundle/</PluginApiDir>
+
+        <PluginDir Condition="$(OS) == 'Windows_NT'">$(LocalAppData)\Logi\LogiPluginService\Plugins\</PluginDir>
+        <PluginDir Condition="$(OS) != 'Windows_NT'">~/Library/Application\ Support/Logi/LogiPluginService/Plugins/</PluginDir>
+
+        <BaseOutputPath>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)..\bin\'))</BaseOutputPath>
+        <OutputPath>$(BaseOutputPath)$(Configuration)\bin\</OutputPath>
+
+        <PluginShortName>GameControl</PluginShortName>
+
     </PropertyGroup>
-    <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-        <DebugType>pdbonly</DebugType>
-        <Optimize>true</Optimize>
-        <OutputPath Condition="$(OS) == 'Windows_NT'">$(BaseOutputPath)$(Configuration)\win\</OutputPath>
-        <OutputPath Condition="$(OS) != 'Windows_NT'">$(BaseOutputPath)$(Configuration)/mac/</OutputPath>
-        <DefineConstants>TRACE</DefineConstants>
-        <ErrorReport>prompt</ErrorReport>
-        <WarningLevel>4</WarningLevel>
-    </PropertyGroup>
-    <ItemGroup>
-        <Reference Include="PluginApi, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-            <SpecificVersion>False</SpecificVersion>
-            <HintPath Condition="$(OS) == 'Windows_NT'">C:\Program Files (x86)\Loupedeck\Loupedeck2\PluginApi.dll</HintPath>
-            <HintPath Condition="$(OS) != 'Windows_NT'">/Applications/Loupedeck.app/Contents/MonoBundle/PluginApi.dll</HintPath>
-        </Reference>
-        <Reference Include="System" />
-        <Reference Include="System.Core" />
-        <Reference Include="System.Web" />
-        <Reference Include="System.Xml.Linq" />
-        <Reference Include="System.Data.DataSetExtensions" />
-        <Reference Include="Microsoft.CSharp" />
-        <Reference Include="System.Data" />
-        <Reference Include="System.Net.Http" />
-        <Reference Include="System.Xml" />
-        <Reference Include="vJoy.Wrapper, Version=1.0.0.5, Culture=neutral, processorArchitecture=MSIL">
-          <HintPath>..\packages\vJoy.Wrapper.1.0.0.5\lib\netstandard2.0\vJoy.Wrapper.dll</HintPath>
-        </Reference>
-        <Reference Include="vJoyInterfaceWrap, Version=0.2.1.6, Culture=neutral, processorArchitecture=MSIL">
-          <HintPath>..\packages\vJoy.Wrapper.1.0.0.5\lib\netstandard2.0\vJoyInterfaceWrap.dll</HintPath>
-        </Reference>
-    </ItemGroup>
-    <ItemGroup>
-        <Compile Include="Adjustments\AxisAdjustment.cs" />
-        <Compile Include="Adjustments\AxisButtonAdjustment.cs" />
-        <Compile Include="Adjustments\AxisEncoderAdjustment.cs" />
-        <Compile Include="CommandInfoType.cs" />
-        <Compile Include="Commands\ButtonCommand.cs" />
-        <Compile Include="Commands\ButtonOff.cs" />
-        <Compile Include="Commands\ButtonOn.cs" />
-        <Compile Include="Commands\ButtonPress.cs" />
-        <Compile Include="Commands\ButtonToggleOnOff.cs" />
-        <Compile Include="Commands\ButtonToggleOnOffOn.cs" />
-        <Compile Include="Commands\ButtonToggleOnOn.cs" />
-        <Compile Include="Commands\ButtonToggleOnOnOn.cs" />
-        <Compile Include="Commands\AxisButton.cs" />
-        <Compile Include="Commands\Pov1Press.cs" />
-        <Compile Include="Commands\Pov2Press.cs" />
-        <Compile Include="Commands\Pov3Press.cs" />
-        <Compile Include="Commands\Pov4Press.cs" />
-        <Compile Include="Commands\PovCommand.cs" />
-        <Compile Include="Helpers\AdjustmentCache.cs" />
-        <Compile Include="JoystickManager.cs" />
-        <Compile Include="Properties\AssemblyInfo.cs" />
-        <Compile Include="GameControlApplication.cs" />
-        <Compile Include="GameControlPlugin.cs" />
-        <Compile Include="Helpers\PluginLog.cs" />
-    </ItemGroup>
-    <ItemGroup>
-        <None Include="metadata\LoupedeckPackage.yaml" />
-        <None Include="packages.config" />
-    </ItemGroup>
     <ItemGroup>
         <None Include="App.config" />
+        <None Remove="obj\**" />
     </ItemGroup>
     <ItemGroup>
       <EmbeddedResource Include="Resources\BlackRoundButton.png" />
@@ -120,15 +53,57 @@
       <EmbeddedResource Include="Resources\ToggleOnOnOnUpDark.png" />
       <EmbeddedResource Include="Resources\ToggleOnOnUpDark.png" />
       <EmbeddedResource Include="Resources\ToggleUpDark.png" />
+      <EmbeddedResource Remove="obj\**" />
+    </ItemGroup>
+
+    <Target Name="CopyPackage" AfterTargets="PostBuildEvent">
+        <Message Text="📦 Copying package files..." Importance="High" />
+        <ItemGroup>
+            <PackageFiles Include="package\**\*" />
+        </ItemGroup>
+        <Copy SourceFiles="@(PackageFiles)" DestinationFolder="$(OutputPath)..\%(RecursiveDir)" />
+        <Message Text="✅ Package files copied to $(OutputPath)..\" Importance="High" />
+    </Target>
+
+    <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+        <Exec Condition="$(OS) == 'Windows_NT'" Command="echo $(BaseOutputPath)$(Configuration)\ &gt; &quot;$(PluginDir)$(ProjectName).link&quot;" />
+        <Exec Condition="$(OS) != 'Windows_NT'" Command="echo $(BaseOutputPath)$(Configuration)\ &gt; $(PluginDir)$(ProjectName).link" />
+        <Message Text="🔨 Created plugin link at: $(PluginDir)$(ProjectName).link" Importance="High" />
+
+        <Message Text="🔄 Sending plugin reload command for $(PluginShortName) to Logi Plugin Service" Importance="High" />
+        <Exec Condition="$(OS) == 'Windows_NT'" Command="start loupedeck:plugin/$(PluginShortName)/reload" ContinueOnError="true" />
+        <Exec Condition="$(OS) != 'Windows_NT'" Command="open loupedeck:plugin/$(PluginShortName)/reload" ContinueOnError="true" />
+        <Message Condition="'$(MSBuildLastTaskResult)' == 'false'" Text="❌ Couldn't reload the plugin, please restart the Logi Plugin Service manually" Importance="High" />
+    </Target>
+
+    <Target Name="PluginClean" AfterTargets="CoreClean">
+        <Message Text="🧹 Cleaning up plugin link file and output directories..." Importance="High" />
+
+        <Delete Condition="$(OS) == 'Windows_NT'" Files="$(PluginDir)$(ProjectName).link" />
+        <Exec Condition="$(OS) != 'Windows_NT'" Command="rm -f $(PluginDir)$(ProjectName).link" />
+
+        <RemoveDir Directories="$(OutputPath)..\" />
+
+        <Message Text="🧼 Plugin link file and output directories have been cleaned!" Importance="High" />
+    </Target>
+    
+    <ItemGroup>
+        <Reference Include="PluginApi">
+            <HintPath>$(PluginApiDir)PluginApi.dll</HintPath>
+        </Reference>
     </ItemGroup>
     <ItemGroup>
       <None Include="vJoyInterface.dll">
         <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
       </None>
     </ItemGroup>
-    <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
-    <PropertyGroup>
-        <PostBuildEvent Condition="$(OS) == 'Windows_NT'">call "$(ProjectDir)BuildEvents\postbuild.cmd" "$(ProjectDir)" "$(TargetDir)"</PostBuildEvent>
-        <PostBuildEvent Condition="$(OS) != 'Windows_NT'">sh "$(ProjectDir)BuildEvents\postbuild" "$(ProjectDir)" "$(TargetDir)"</PostBuildEvent>
-    </PropertyGroup>
+    <ItemGroup>
+      <PackageReference Include="vJoyInterface" Version="0.2.1.6" />
+    </ItemGroup>
+    <ItemGroup>
+      <Folder Include="package\" />
+    </ItemGroup>
+    <ItemGroup>
+      <Compile Remove="obj\**" />
+    </ItemGroup>
 </Project>
