--- a/GameControlPlugin/GameControlPlugin.csproj
+++ b/GameControlPlugin/GameControlPlugin.csproj
@@ -4,97 +4,41 @@
         <ErrorReport>prompt</ErrorReport>
         <WarningLevel>4</WarningLevel>
         <AssemblyVersion>0.8.0</AssemblyVersion>
-
+        
         <AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
         <CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 
         <PluginApiDir Condition="$(OS) == 'Windows_NT'">C:\Program Files\Logi\LogiPluginService\</PluginApiDir>
-        <PluginApiDir Condition="$(OS) != 'Windows_NT'">/Applications/Utilities/LogiPluginService.app/Contents/MonoBundle/</PluginApiDir>
-
         <PluginDir Condition="$(OS) == 'Windows_NT'">$(LocalAppData)\Logi\LogiPluginService\Plugins\</PluginDir>
-        <PluginDir Condition="$(OS) != 'Windows_NT'">~/Library/Application\ Support/Logi/LogiPluginService/Plugins/</PluginDir>
 
         <BaseOutputPath>$([System.IO.Path]::GetFullPath('$(MSBuildThisFileDirectory)..\bin\'))</BaseOutputPath>
         <OutputPath>$(BaseOutputPath)$(Configuration)\bin\</OutputPath>
 
         <PluginShortName>GameControl</PluginShortName>
     </PropertyGroup>
-    <ItemGroup>
-        <None Remove="obj\**" />
-    </ItemGroup>
-    <ItemGroup>
-      <EmbeddedResource Include="Resources\BlackRoundButton.png" />
-      <EmbeddedResource Include="Resources\BlackSquareButton.png" />
-      <EmbeddedResource Include="Resources\BlackSquareCCWButton.png" />
-      <EmbeddedResource Include="Resources\BlackSquareCWButton.png" />
-      <EmbeddedResource Include="Resources\BlackSquareDownButton.png" />
-      <EmbeddedResource Include="Resources\BlackSquareLeftButton.png" />
-      <EmbeddedResource Include="Resources\BlackSquareRightButton.png" />
-      <EmbeddedResource Include="Resources\BlackSquareUpButton.png" />
-      <EmbeddedResource Include="Resources\GrayRotary.png" />
-      <EmbeddedResource Include="Resources\GrayRoundButton.png" />
-      <EmbeddedResource Include="Resources\GraySquareButton.png" />
-      <EmbeddedResource Include="Resources\Icon16x16.png" />
-      <EmbeddedResource Include="Resources\Icon256x256.png" />
-      <EmbeddedResource Include="Resources\Icon32x32.png" />
-      <EmbeddedResource Include="Resources\Icon48x48.png" />
-      <EmbeddedResource Include="Resources\RedRoundButton.png" />
-      <EmbeddedResource Include="Resources\ToggleDownDark.png" />
-      <EmbeddedResource Include="Resources\ToggleMiddleDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOffDownDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOffOnDownDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOffOnMiddleDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOffOnUpDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOffUpDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOnDownDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOnOnDownDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOnOnMiddleDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOnOnUpDark.png" />
-      <EmbeddedResource Include="Resources\ToggleOnOnUpDark.png" />
-      <EmbeddedResource Include="Resources\ToggleUpDark.png" />
-      <EmbeddedResource Remove="obj\**" />
-    </ItemGroup>
-
-    <Target Name="CopyPackage" AfterTargets="PostBuildEvent">
-        <Message Text="📦 Copying package files..." Importance="High" />
-        <ItemGroup>
-            <PackageFiles Include="package\**\*" />
-        </ItemGroup>
-        <Copy SourceFiles="@(PackageFiles)" DestinationFolder="$(OutputPath)..\%(RecursiveDir)" />
-        <Message Text="✅ Package files copied to $(OutputPath)..\" Importance="High" />
-    </Target>
-
+     
     <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-        <Exec Condition="$(OS) == 'Windows_NT'" Command="echo $(BaseOutputPath)$(Configuration)\ &gt; &quot;$(PluginDir)$(ProjectName).link&quot;" />
-        <Exec Condition="$(OS) != 'Windows_NT'" Command="echo $(BaseOutputPath)$(Configuration)\ &gt; $(PluginDir)$(ProjectName).link" />
-        <Message Text="🔨 Created plugin link at: $(PluginDir)$(ProjectName).link" Importance="High" />
-
-        <Message Text="🔄 Sending plugin reload command for $(PluginShortName) to Logi Plugin Service" Importance="High" />
+        <Exec Condition="$(OS) == 'Windows_NT'" Command="echo $(OutputPath) &gt; &quot;$(PluginDir)$(ProjectName).link&quot;" />
         <Exec Condition="$(OS) == 'Windows_NT'" Command="start loupedeck:plugin/$(PluginShortName)/reload" ContinueOnError="true" />
-        <Exec Condition="$(OS) != 'Windows_NT'" Command="open loupedeck:plugin/$(PluginShortName)/reload" ContinueOnError="true" />
         <Message Condition="'$(MSBuildLastTaskResult)' == 'false'" Text="❌ Couldn't reload the plugin, please restart the Logi Plugin Service manually" Importance="High" />
     </Target>
 
-    <Target Name="PluginClean" AfterTargets="CoreClean">
-        <Message Text="🧹 Cleaning up plugin link file and output directories..." Importance="High" />
-
-        <Delete Condition="$(OS) == 'Windows_NT'" Files="$(PluginDir)$(ProjectName).link" />
-        <Exec Condition="$(OS) != 'Windows_NT'" Command="rm -f $(PluginDir)$(ProjectName).link" />
-
-        <RemoveDir Directories="$(OutputPath)..\" />
-
-        <Message Text="🧼 Plugin link file and output directories have been cleaned!" Importance="High" />
-    </Target>
-    
+     <Target Name="PluginClean" AfterTargets="CoreClean">
+         <Delete Condition="$(OS) == 'Windows_NT'" Files="$(PluginDir)$(ProjectName).link" />
+         <RemoveDir Directories="$(OutputPath)metadata" />
+     </Target>
+     
+     <Target Name="CopyMetadata" AfterTargets="PostBuildEvent">
+         <ItemGroup>
+             <MetadataFiles Include="package\metadata\*.*" />
+         </ItemGroup>
+         <Copy SourceFiles="@(MetadataFiles)" DestinationFolder="$(OutputPath)metadata" />
+     </Target>
+     
     <ItemGroup>
         <Reference Include="PluginApi">
             <HintPath>$(PluginApiDir)PluginApi.dll</HintPath>
         </Reference>
-    </ItemGroup>
-    <ItemGroup>
-      <None Include="vJoyInterface.dll">
-        <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
-      </None>
     </ItemGroup>
     <ItemGroup>
       <PackageReference Include="vJoyInterface" Version="0.2.1.6" />
@@ -105,4 +49,36 @@
     <ItemGroup>
       <Compile Remove="obj\**" />
     </ItemGroup>
+     <ItemGroup>
+         <EmbeddedResource Include="Resources\BlackRoundButton.png" />
+         <EmbeddedResource Include="Resources\BlackSquareButton.png" />
+         <EmbeddedResource Include="Resources\BlackSquareCCWButton.png" />
+         <EmbeddedResource Include="Resources\BlackSquareCWButton.png" />
+         <EmbeddedResource Include="Resources\BlackSquareDownButton.png" />
+         <EmbeddedResource Include="Resources\BlackSquareLeftButton.png" />
+         <EmbeddedResource Include="Resources\BlackSquareRightButton.png" />
+         <EmbeddedResource Include="Resources\BlackSquareUpButton.png" />
+         <EmbeddedResource Include="Resources\GrayRotary.png" />
+         <EmbeddedResource Include="Resources\GrayRoundButton.png" />
+         <EmbeddedResource Include="Resources\GraySquareButton.png" />
+         <EmbeddedResource Include="Resources\Icon16x16.png" />
+         <EmbeddedResource Include="Resources\Icon256x256.png" />
+         <EmbeddedResource Include="Resources\Icon32x32.png" />
+         <EmbeddedResource Include="Resources\Icon48x48.png" />
+         <EmbeddedResource Include="Resources\RedRoundButton.png" />
+         <EmbeddedResource Include="Resources\ToggleDownDark.png" />
+         <EmbeddedResource Include="Resources\ToggleMiddleDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOffDownDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOffOnDownDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOffOnMiddleDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOffOnUpDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOffUpDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOnDownDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOnOnDownDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOnOnMiddleDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOnOnUpDark.png" />
+         <EmbeddedResource Include="Resources\ToggleOnOnUpDark.png" />
+         <EmbeddedResource Include="Resources\ToggleUpDark.png" />
+         <EmbeddedResource Remove="obj\**" />
+     </ItemGroup>
 </Project>
