--- a/GameControlPlugin/GameControlPlugin.csproj
+++ b/GameControlPlugin/GameControlPlugin.csproj
@@ -46,9 +46,6 @@
     <ItemGroup>
       <Folder Include="package\" />
     </ItemGroup>
-    <ItemGroup>
-      <Compile Remove="obj\**" />
-    </ItemGroup>
      <ItemGroup>
          <EmbeddedResource Include="Resources\BlackRoundButton.png" />
          <EmbeddedResource Include="Resources\BlackSquareButton.png" />
@@ -79,9 +76,16 @@
          <EmbeddedResource Include="Resources\ToggleOnOnOnUpDark.png" />
          <EmbeddedResource Include="Resources\ToggleOnOnUpDark.png" />
          <EmbeddedResource Include="Resources\ToggleUpDark.png" />
-         <EmbeddedResource Remove="obj\**" />
      </ItemGroup>
+
      <ItemGroup>
        <PackageReference Include="CoreDX.vJoy.Wrapper" Version="1.2.3" />
+       <PackageReference Include="vJoyInterface" Version="0.2.1.6" />
      </ItemGroup>
-</Project>
+
+     <ItemGroup>
+         <None Include="vJoyInterfaceWrap.dll" CopyToOutputDirectory="PreserveNewest" />
+         <None Include="vJoyInterface.dll" CopyToOutputDirectory="PreserveNewest" />
+     </ItemGroup>
+
+ </Project>
